# mpaws

./: CHANGELOG.md  Makefile  README.md  piemaker.yml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: ci-workflow.yaml  publish-workflow.yaml  release-major-workflow.yaml  release-minor-workflow.yaml  release-patch-workflow.yaml  upgrade-deps-workflow.yaml
complexity/radon/: index.html  report.txt
complexity/wily/: index.html
conf/: info.yaml
coverage/coverage/: class_index.html  function_index.html  index.html  status.json  z_559780da09d80648___init___py.html  z_559780da09d80648_logger_py.html
doc/sphinx/: conf.py  genindex.html  index.html  index.rst  mpaws.html  objects.inv  search.html  searchindex.js
doc/sphinx/_build/doctrees/: environment.pickle  index.doctree  mpaws.doctree
doc/sphinx/_build/html/: .buildinfo  genindex.html  mpaws.html  objects.inv  search.html  searchindex.js
doc/sphinx/_build/html/_sources/: index.rst.txt  mpaws.rst.txt
doc/sphinx/_sources/: index.rst.txt
examples/: cli.sh  mpaws-cli.sh  multi-profiles-multi-regions.sh  multi-profiles-single-region.sh  warnings.sh
lint/pylint/: index.html  report.json
mpaws/: __init__.py  logger.py
test-integration/pytest/: index.html
test/pytest/: index.html
tests/: test_logger.py
tests-integration/: test_init.py
