[build-system]
requires = [ "poetry-core" ]
build-backend = "poetry.core.masonry.api"

[installer]
no-binary = [ ":none:" ]

[tool.poetry]
name = "mpaws"
version = "0.11.1-pre.0"
description = "Execute AWS CLI across multiple profiles and multiple regions in one go"
license = "Apache-2.0"
authors = [ "Cliffano Subagio <cliffano@gmail.com>" ]
readme = "README.md"
homepage = "https://github.com/cliffano/mpaws"
repository = "https://github.com/cliffano/mpaws"
documentation = "https://github.com/cliffano/mpaws"
keywords = [
  "mpaws",
  "aws",
  "cli",
  "multi",
  "multiple",
  "profiles",
  "regions"
]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent"
]

[[tool.poetry.packages]]
include = "mpaws"

[tool.poetry.scripts]
mpaws = "mpaws:cli"

[tool.poetry.dependencies]
python = "^3.10"
boto3 = "~1.38.27"
click = "~8.2.1"
conflog = "~2.0.1"

[tool.poetry.group.dev.dependencies]
black = "~25.1.0"
twine = "~6.1.0"
wheel = "~0.45.1"

[tool.poetry.group.test.dependencies]
coverage = "~7.8.2"
numpy = "1.26.4" # https://stackoverflow.com/questions/78634235/numpy-dtype-size-changed-may-indicate-binary-incompatibility-expected-96-from
pylint = "~3.3.7"
pytest = "~8.3.5"
wily = "~1.25.0"

[tool.poetry.group.doc.dependencies]
pylint-report = "~2.4.2"
pytest-html = "~4.1.1"
Sphinx = "8.1.3" # Pinned for Python 3.10 support
